02 默认模板以及显示一篇文章

--- a/src/view/public/index.html
+++ b/src/view/public/index.html
@@ -7,14 +7,15 @@
 <body>
 
 <?php
-echo $test;
-/*
+	// 默认包含 controller/public/header.php 让该控制器再去包含模板再此处，这样可以在控制器中方便的设置header的显示内容
+?>
 
+<?php
+	// 包含 body
+?>
 
-在这里输出你在控制器中定义的变量	
-
-*/
-
+<?php
+	// 包含 footer
 ?>
 
 </body>
