--- a/src/view/article/article.html
+++ b/src/view/article/article.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-  <title>photo_style_two</title>
-  <meta name="description" content="website description" />
-  <meta name="keywords" content="website keywords, website keywords" />
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <!-- modernizr enables HTML5 elements and feature detects -->
-</head>
-<body>
-<div>
+<pre>
 
 <?php  
 
@@ -19,5 +9,4 @@ echo $result['post_content'];
 
 ?>
 
-</div>
-</body>
+</pre>
