--- a/src/view/public/footer.html
+++ b/src/view/public/footer.html
@@ -1,3 +1,3 @@
     <footer>
-      <p>Copyright &copy; photo_style_two | <a href="#">测试模板</a></p>
+      <p>Copyright &copy; Mzzo | <a href="#">测试模板</a></p>
     </footer>
